--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0;url=demo/" />
-    <title>data-rest</title>
+    <title>data-pipes</title>
   </head>
   <body>
     <!--
