Adds ‹data-gql› element with basic support for querying GQL server (#2)

--- a/data-gql/data-gql.html
+++ b/data-gql/data-gql.html
@@ -1,25 +1,168 @@
-<link rel="import" href="../polymer/polymer-element.html">
+<script src="../../immutable/dist/immutable.min.js"></script>
+<link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../iron-ajax/iron-request.html">
 
 <dom-module id="data-gql">
   <template>
+    <iron-request id="xhr" hidden></iron-request>
   </template>
 
   <script>
     /**
      * `data-gql`
-     * A collection of data access components, all returning immutable data structures, along with their schema in-band
+     *
+     * Requests execution of given operation, query and variables
+     * to a GraphQL server and returns the results as an immutable
+     * datastructure, along with their schema in-band.
+     *
+     * Namespaces:
+     *
+     *   Polymer.DataGQL.Entities – Entity models of the records
+     *     returned by the fetch() method
      *
      * @customElement
      * @polymer
      * @demo demo/index.html
      */
-    class DataPipes extends Polymer.Element {
+    class DataGQL extends Polymer.Element {
       static get is() { return 'data-gql'; }
       static get properties() {
-        return {};
+        return {
+          logging: {
+            type: Boolean,
+            value: false,
+            // One-way, downward
+            notify: false,
+            readOnly: false
+          },
+          auto: {
+            type: Boolean,
+            value: false,
+            // One-way, downward
+            notify: false,
+            readOnly: false
+          },
+          url: {
+            type: String,  // URI
+            value: void 0,
+            // One-way, downward
+            notify: false,
+            readOnly: false
+          },
+          query: {
+            type: String,
+            value: void 0,
+            // One-way, downward
+            notify: false,
+            readOnly: false
+          },
+          op: {
+            type: String,
+            value: void 0,
+            // One-way, downward
+            notify: false,
+            readOnly: false
+          },
+          variables: {
+            type: Object,
+            value: void 0,
+            // One-way, downward
+            notify: false,
+            readOnly: false
+          },
+          data: {
+            type: Object,
+            value: void 0,
+            observer: "_dataChanged",
+            // One-way, upward
+            notify: true,
+            readOnly: true
+          }
+        };
+      }
+
+      static get observers() {
+        return [ "_queryChanged( query, op, variables)" ];
+      }
+
+      static get log() {
+        return {
+          error: console.error.bind( console, `%c${DataGQL.is}> %c%s`, "color:gray", "color:red"),
+          warn:  console.warn.bind(  console, `%c${DataGQL.is}> %c%s`, "color:gray", "color:darkorange"),
+          info:  console.info.bind(  console, `%c${DataGQL.is}> %c%s`, "color:gray", "color:black"),
+          debug: console.debug.bind( console, `%c${DataGQL.is}> %c%s %o`, "color:gray", "color:gray")
+        };
+      }
+
+      static _serializeQueryToURL( serverURL, queryStr, variablesObj, opName) {
+        // NOTE: iron-request will escape the URI components for us
+        return `${serverURL}?query=${queryStr}&variables=${JSON.stringify( variablesObj)}`
+          + (( typeof opName === "undefined" || opName === null) ? "" : `&operationName=${opName}`);
+      }
+
+      constructor() {
+        super();
+        if( typeof Polymer.DataGQL === "undefined" || Polymer.DataGQL === null) {
+          Polymer.DataGQL = {
+            Entities: {
+              Meta: Immutable.Record({
+                fetchedFrom: void 0,
+                fetchedAt: void 0
+              }, "Meta"),
+              Response: Immutable.Record({
+                data: void 0,
+                errors: void 0,
+                schema: void 0,
+                meta: void 0
+              }, "Response")
+            }
+          };
+        };
+      }
+
+      _queryChanged( query, op, variables) {
+        if( this.auto) {
+          Polymer.RenderStatus.afterNextRender( this, this.fetch);
+        }
+      }
+
+      _dataChanged( newData, oldData) {
+        if( this.logging)
+          DataGQL.log.debug(( typeof oldData === "undefined" || oldData === null ? "Fetched" : "Re-fetched")
+            + ` data from ${newData.meta.fetchedFrom} at ${newData.meta.fetchedAt.toISOString()}`, newData.toString());
+      }
+
+      fetch() {
+        if( this.logging)
+          DataGQL.log.info( `Querying GQL server at ${this.url}${this.op ? " for op " + this.op : ""}…`);
+        var boundHandleResponse = this._handleResponse.bind( this);
+        this.$.xhr.send({
+          method: "GET",
+          url: DataGQL._serializeQueryToURL( this.url, this.query, this.variables, this.op),
+          async: true, handleAs: "json"
+        }).then( function( xhrObj) {
+          DataGQL.log.debug( "Received result: ", xhrObj);
+          boundHandleResponse( xhrObj.response);
+        }).catch( function( err) {
+          DataGQL.log.error( "Received error: " + err);
+        });
+      }
+
+      _handleResponse( response) {
+        if( this.logging)
+          DataGQL.log.debug( "Received response", response);
+        this._setData( new Polymer.DataGQL.Entities.Response({
+          meta: new Polymer.DataGQL.Entities.Meta({
+            fetchedFrom: this.url,
+            fetchedAt: new Date(),
+          }),
+          data: Immutable.fromJS( response.data),
+          errors: Immutable.fromJS( response.errors),
+          schema: Immutable.Map()
+        }));
       }
     }
 
-    window.customElements.define(DataPipes.is, DataPipes);
+    window.customElements.define( DataGQL.is, DataGQL);
   </script>
 </dom-module>
