--- a/data-format/data-format.html
+++ b/data-format/data-format.html
@@ -25,7 +25,7 @@
           },
           out: {
             type: Object,
-            computed: "_format(dataIn, lang)",
+            computed: "_format(in, lang)",
             notify: true,
             readOnly: true,
           }
