Fixes wrong components path

--- a/data-rest/data-rest.html
+++ b/data-rest/data-rest.html
@@ -1,5 +1,5 @@
-<link rel="import" href="bower_components/polymer/polymer-element.html">
-<link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../iron-ajax/iron-ajax.html">
 
 <dom-module id="data-rest">
   <script>
@@ -20,7 +20,7 @@
       //       type: Object,
       //       readOnly: true,
       //       notify: true,
-      //       value: { 
+      //       value: {
       //         data: null,
       //         errors: null,
       //         extensions: null,
