--- a/data-rest/data-rest.html
+++ b/data-rest/data-rest.html
@@ -1,4 +1,4 @@
-<script src="../../immutable/dist/immutable.min.js"></script>
+<link rel="import" href="../data-imports/immutablejs-import.html">
 <link rel="import" href="../../polymer/polymer-element.html">
 <link rel="import" href="../../iron-ajax/iron-ajax.html">
 
