Updates data-rest to not trigger changes when data is null

--- a/data-rest/data-rest.html
+++ b/data-rest/data-rest.html
@@ -42,6 +42,7 @@
       }
 
       _computeData(data){
+        if(data == null) { return;}
         if(this.debug) console.log("DATA-REST> computing data from last-response:", data)
         return Immutable.fromJS({
           data:  data,
